2pm fixed Quality wrap

--- a/Styles.css
+++ b/Styles.css
@@ -408,7 +408,7 @@ Quality
 
 
 .quality__tag {
-  width: 600px;
+
   color: #6415ff; 
   font-size: 18px;
   font-weight: 700;
@@ -427,7 +427,7 @@ Quality
   font-weight: 900;
   letter-spacing: 2px;
   color: rgb(36, 62, 99);
-  width: 500px;
+  
 }
 
 
@@ -436,30 +436,36 @@ Quality
   font-size: 18px;
   font-weight: 600;
   opacity: 50%;
-  padding: 0px;
+  padding: 10px;
   padding-top: 0px;
   padding-bottom: 0px;
 }
 
-.quality__img--wrapper {
+.quality__description {
+  display: flex;
+  flex-wrap: wrap;
+  box-sizing: border-box;
+  text-align: left;
 }
 
 .quality__container {
   display: flex;
   flex-direction: column;
-  width: 400px;
+  flex: 0 0 45%;
+
+
+  height: auto;
 }
 .quality__images {
-  display: flex;
-  flex-flow: row wrap;  
-
-
-  
-
-
+  flex: 0 0 50%;
 }
 
 .quality__hero {
+  max-width: 600px;
+  height: auto;
+}
+
+/* .quality__hero {
   display: block;
   display: flex;
   flex-direction: column;
@@ -467,7 +473,7 @@ Quality
   max-width: 75%;
   height:auto;
 
-}
+} */
 
 
 /* 
